...
                }

                if !todos.isEmpty {
                    Section(isExpanded: $todosExpanded) {
                        ForEach(todos) { openTaskRow($0) }
                    } header: {
                        Text("To Do")
                    }
                }

                if !chores.isEmpty {
                    Section(isExpanded: $choresExpanded) {
                        ForEach(chores) { openTaskRow($0) }
...
